# wasabi-s3

./: .gitignore  README.md  REFACTOR_PLAN.md  SCHEMA.md  policy.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: create_buckets.py  delete_buckets.py  delete_inline_policy.py  get_wasabi_state.py  wasabi_state_json_to_csv.py  wasabi_state_to_gsheet.py
scripts/: generate_schema.py
src/wasabi/: __init__.py  bucket.py  client.py  group.py  policy.py  user.py  wasabi.py
src/wasabi_s3/: __init__.py  client.py  policy.py
tests/: conftest.py  test_bucket.py  test_group.py  test_policy.py  test_schema.py  test_user.py  test_wasabi_base.py
