[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wasabi-cloud"
version = "0.1.0"
description = "Python SDK for Wasabi Cloud Storage"
license = "LGPL-2.1-or-later"
requires-python = ">=3.13"
dependencies = [
    "boto3",
    "botocore",
    "requests",
    "aws-requests-auth",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "mypy",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wasabi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
